
 * Made changes Homework 9 had us do. This includes:

 * Integrated quotes and chat apps.

 * Changed quotes homepage and added time to chat messages.

 * FOR MY PROJECT:

 * I implemented the image upload with AJAX and JQuery.

 * I used jquery's ready function and ajax form function to do so. The
   changes can be seen in upload.html under images/templates.

2014-04-03 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 10 had us do. This includes:

 * Implemented two projects.

 * FIRST PROJECT (5 Points):

 * Changed imageapp to support JPEG and TIFF. (#4)

 * I had to keep track of the image type along with the image data in
   image.py. Using that, I would change the content-type for each image
   request.

 * SECOND PROJECT (5 Points):

 * Add a URL that provides a list of images, resized to thumbnails. (#5)

 * First I had to create a new template (image_list.html) which included a
   jinja2 for loop to create the image tags. I also had to add a new function
   to root.py to handle the new web page request and to pass the image count
   to render method. Therefore, I had to create a method in image.py to get
   the image count and add a link to the index.html.

2014-04-08 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 11 had us do. This includes:

 * Integrated cookie app and set up its twill test.

 * Stores images in SQL database now. (The app automatically detects if the
   image table already exists so there is no special first time instructions.
 
 * Implemented two projects.

 * FIRST PROJECT (5 Points):

 * Make a thumbnail list using server-side resizing. (Used Pillow)

 * First you must install Pillow using "Pip Install Pillow". Also make sure
   that decoder libraries are installed. (Like libjpeg) The changes are under
   the root.py module where the a thumbnail image is returned. Instead of
   having the html image tag have a width and height, Pillow is used to
   manipulate the image before the data is returned.