@@ -9,9 +9,10 @@ from . import html, image
 class RootDirectory(Directory):
     _q_exports = []
 
-    @export(name='')                    # this makes it public.
+    @export(name='') # This makes it public.
     def index(self):
-        return html.render('index.html')
+        img = image.get_latest_image()
+        return html.render('index.html', {'name' : img[2], 'description' : img[3]})
 
     @export(name='upload')
     def upload(self):
@@ -22,6 +23,8 @@ class RootDirectory(Directory):
         request = quixote.get_request()
         print request.form.keys()
         the_file = request.form['file']
+        name = request.form['name']
+        descrip = request.form['description']
 
         # Gets image data.
         print dir(the_file)
@@ -37,13 +40,14 @@ class RootDirectory(Directory):
         else:
             imagetype = 'png'
 
-        image.add_image(data, imagetype)
+        image.add_image(data, imagetype, name, descrip)
 
         return quixote.redirect('./')
 
     @export(name='image')
     def image(self):
-        return html.render('image.html')
+        img = image.get_latest_image()
+        return html.render('image.html', {'name' : img[2], 'description' : img[3]})
 
     @export(name='image_raw')
     def image_raw(self):
