@@ -3,6 +3,8 @@
 {% block content %}
 Here is your image:
 <p>
+<p>Name: {{ name }}</p>
+<p>Description: {{ description }}</p>
 <img width=40% src='image_raw?special=latest'/>
 
 {% endblock %}
