@@ -5,5 +5,7 @@
 <a href='image'>Show most recent image</a> |
 <a href='image_list'>Show list of images</a>
 <p>
+<p>Name: {{ name }}</p>
+<p>Description: {{ description }}</p>
 <img width=40% src='image_raw?special=latest'/>
 {% endblock %}
