@@ -4,7 +4,9 @@
 Upload a PNG, JPG, or TIFF Image:
 
 <form id='fileform' enctype='multipart/form-data' action='upload_receive' method='POST'>
-Filename: <input type='file' name='file'><p>
+    Name: <input type='text' name='name'><br>
+    Description: <input type='text' name='description'><br>
+    Filename: <input type='file' name='file'><br>
 <input type='submit'>
 </form>
 
